# cpp-web-app

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
crow/examples/: CMakeLists.txt
install/: setup.sh
src/: CMakeLists.txt  Makefile
src/backend/: Backend_Controller.cpp  CLI_Controller.cpp  CLI_Parser.cpp  CMakeLists.txt  backendController.cpp  helloworld.cpp  web_app.cpp
src/cmake/: FindBoostLib.cmake  FindCLI11.cmake  FindJSON.cmake
src/include/: Backend_Controller.h  CLI_Controller.h  CLI_Parser.h  constants.h
